--- a/IReader/res/layout/channel.xml
+++ b/IReader/res/layout/channel.xml
@@ -2,24 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
-
-    <FrameLayout
-        android:id="@+id/frameLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:src="@drawable/rootblock_block_blue_1"/>
-
-        <TextView
-            android:id="@+id/grit_item_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="新浪微博" android:layout_gravity="bottom|center_horizontal" android:gravity="center" android:layout_marginBottom="5dp"/>
-
-    </FrameLayout>
+    android:orientation="horizontal" android:background="@drawable/rootblock_block_orange_1">
 
 </LinearLayout>
