--- a/IReader/res/layout/channel_item.xml
+++ b/IReader/res/layout/channel_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical" android:background="@drawable/channel_item_selector">
+        android:orientation="vertical" android:background="@drawable/channel_item_selector" android:layout_margin="5dp" android:clickable="true">
 
         <FrameLayout
             android:id="@+id/frameLayout1"
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/imageView1"
+                android:id="@+id/channel_item_remove"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/rootblock_btn_remove" android:visibility="invisible"/>
@@ -30,7 +30,7 @@
             android:orientation="vertical" android:layout_weight="1" android:gravity="center">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/channel_item_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/icon_link" />
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content" android:gravity="center" android:layout_margin="5dp">
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/channel_item_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="国际新闻" />
