--- a/IReader/res/layout/channel_item.xml
+++ b/IReader/res/layout/channel_item.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <LinearLayout
-        android:id="@+id/linearLayout1"
+        android:id="@+id/channel_item_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical" android:background="@drawable/channel_item_selector" android:layout_margin="5dp" android:clickable="true">
