--- a/IReader/res/layout/channel.xml
+++ b/IReader/res/layout/channel.xml
@@ -6,8 +6,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout1"
-        android:layout_width="fill_parent"
-        android:layout_height="60dp" >
+        android:layout_width="fill_parent" android:layout_height="wrap_content">
     </LinearLayout>
 
     <LinearLayout
@@ -15,10 +14,25 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" android:layout_weight="1">
-        
-        <WebView android:id="@+id/channel_wv"
-    	android:layout_width="fill_parent"
-    	android:layout_height="fill_parent"/>
+
+        <FrameLayout
+            android:id="@+id/frameLayout1"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" >
+
+            <android.gesture.GestureOverlayView
+                android:id="@+id/gestureOverlayView1"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" >
+
+            </android.gesture.GestureOverlayView>
+
+            <WebView
+                android:id="@+id/channel_wv"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
+
+        </FrameLayout>
         
     </LinearLayout>
 
