--- a/IReader/res/layout/channel.xml
+++ b/IReader/res/layout/channel.xml
@@ -4,36 +4,10 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="fill_parent" android:layout_height="wrap_content">
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <ViewFlipper
+        android:id="@+id/channel_viewFlipper"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" android:layout_weight="1">
-
-        <FrameLayout
-            android:id="@+id/frameLayout1"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" >
-
-            <android.gesture.GestureOverlayView
-                android:id="@+id/gestureOverlayView1"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent" >
-
-            </android.gesture.GestureOverlayView>
-
-            <WebView
-                android:id="@+id/channel_wv"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent" />
-
-        </FrameLayout>
-        
-    </LinearLayout>
+        android:layout_height="wrap_content" android:layout_weight="1">
+    </ViewFlipper>
 
 </LinearLayout>
