--- a/IReader/res/values/arrays.xml
+++ b/IReader/res/values/arrays.xml
@@ -38,5 +38,14 @@
         <item>财经网</item>
         <item>微博广场</item>
     </string-array>
+    <string-array name="mode_flow">
+        <item >全图片</item>
+        <item >仅文本</item>
+        <item >智能模式</item>
+    </string-array>
+    <string-array name="new_add">
+        <item >放在最后</item>
+        <item >放在最前</item>
+    </string-array>
     
 </resources>
