--- a/IReader/res/layout/title_text.xml
+++ b/IReader/res/layout/title_text.xml
@@ -2,34 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" android:background="#ffffff">
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
+    <TextView
+        android:id="@+id/title_conment1"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:orientation="vertical" android:layout_weight="1">
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:text="TextView" />
 
-        <TextView
-            android:id="@+id/title_conment1"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:text="TextView" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <TextView
+        android:id="@+id/title_conment2"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:orientation="vertical" android:layout_weight="1">
-
-        <TextView
-            android:id="@+id/title_conment2"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:text="TextView" />
-
-    </LinearLayout>
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:text="TextView" />
 
 </LinearLayout>
